Update code for: 1. Change traces plugin url 2. Set browser title for plugin page 3. Add issues right side bar

--- a/app/views/traces_home/index.html.erb
+++ b/app/views/traces_home/index.html.erb
@@ -1,2 +1,6 @@
 <h2><%=t :text_traces_title%></h2>
 <%= content_tag('p', l(:label_no_data), :class => 'nodata') if @traces_data.empty? %>
+<% content_for :sidebar do %>
+    <%= render :partial => 'issues/sidebar' %>
+<% end %>
+<% html_title(l(:text_menu_home)) -%>
