Changes are added for template implementation. (removed duplicate code in pages.html.erb)

--- a/app/views/traces_home/index.html.erb
+++ b/app/views/traces_home/index.html.erb
@@ -119,9 +119,10 @@
 
 <div>
 	 <% if @offset != 0 then%>
-	     <%=link_to(l(:label_traces_previous), {:controller => 'traces_home', :action => 'pages', :id => @project.identifier, :offset=> @offset}) %>
+	 		 <%@offset=@offset - @limit%>
+			 <%=link_to(l(:label_traces_previous), {:controller => 'traces_home', :action => 'pages', :id => @project.identifier, :offset=> @offset}) %>
 	 <% end %>
-	 <%@offset=@offset + @limit.to_i %>
+	 <%@offset=@offset + @limit%>
 
    <% if @isNext %>
 	     <%=link_to(l(:label_traces_next), {:controller => 'traces_home', :action => 'pages', :id => @project.identifier, :offset => @offset}) %>
