Change description: 1. Added search funtionality 2. index page modified 3. paginaiton api modified as per search criteria 4. add new properties in en.yml file

--- a/app/views/traces_home/index.html.erb
+++ b/app/views/traces_home/index.html.erb
@@ -1,8 +1,23 @@
 <%= stylesheet_link_tag "tracess.css", :plugin => 'traces', :media => 'print,screen' %>
 <%= javascript_include_tag('jquery/jquery.min.js', 'tracess.js', :plugin => 'traces') %>
 <h2><%=t :text_traces_title%></h2>
+
+
+<fieldset id="Search" class="collapsible">
+  <legend onclick="toggleFieldset(this);"><%= l(:label_filter_plural) %></legend>
+  <div>
+	<%= form_tag({:contoller => "traces_home", :action => "searchstory", :id => @project.identifier}, :method => "get") do %>
+  <div>
+				<%= l(:lable_traces_search_criteria) %>
+				<%= text_field_tag 'q', @question, :size => 30, :id => 'search-input' %>
+				<%= submit_tag( l(:lable_traces_search_button) ) %>
+  </div>
+	<% end %>
+  </div>
+</fieldset>
 <%= content_tag('p', l(:label_no_data), :class => 'nodata') if @traces_data.empty? %>
 
+<br>
 <% if !@traces_data.empty? %>
 <table class="tracelist">
 <thead>
@@ -29,7 +44,7 @@
 					<% end%>
 					<td><%=phaseData.path%></td>
 					<td><%phaseData.revisions.each_with_index do |rev,idx|%>
-            <%=link_to(rev.slice(0,8), {:controller => 'repositories', :action => 'revision', :id => @project.identifier, :rev => rev}, :class => 'changeset')%>
+            <%=link_to(rev.slice(0,8), {:controller => 'repositories', :action => 'revision', :id => @project.identifier, :rev => rev}, :class => 'changeset')%><% if phaseData.revisions.size-1 != idx %>,<%end%>
           <%end%></td>
 				</tr>
 			<% end %>
@@ -51,7 +66,7 @@
 					<% end%>
 					<td><%=phaseData.path%></td>
 					<td><%phaseData.revisions.each_with_index do |rev,idx|%>
-            <%=link_to(rev.slice(0,8), {:controller => 'repositories', :action => 'revision', :id => @project.identifier, :rev => rev}, :class => 'changeset')%>
+            <%=link_to(rev.slice(0,8), {:controller => 'repositories', :action => 'revision', :id => @project.identifier, :rev => rev}, :class => 'changeset')%><% if phaseData.revisions.size-1 != idx then %>,<%end%>
           <%end%></td>
 				</tr>
 			<% end %>
@@ -72,7 +87,7 @@
 					<% end%>
 					<td><%=phaseData.path%></td>
 					<td><%phaseData.revisions.each_with_index do |rev,idx|%>
-            <%=link_to(rev.slice(0,8), {:controller => 'repositories', :action => 'revision', :id => @project.identifier, :rev => rev}, :class => 'changeset')%>
+            <%=link_to(rev.slice(0,8), {:controller => 'repositories', :action => 'revision', :id => @project.identifier, :rev => rev}, :class => 'changeset')%><% if phaseData.revisions.size-1 != idx then %>,<%end%>
           <%end%></td>
 				</tr>
 			<% end %>
@@ -94,6 +109,7 @@
 					<td><%=phaseData.path%></td>
 					<td><%phaseData.revisions.each_with_index do |rev,idx|%>
             <%=link_to(rev.slice(0,8), {:controller => 'repositories', :action => 'revision', :id => @project.identifier, :rev => rev}, :class => 'changeset')%>
+            <% if phaseData.revisions.size-1 != idx then %>,<%end%>
           <%end%></td>
 				</tr>
 			<% end %>
@@ -120,12 +136,21 @@
 <div>
 	 <% if @offset != 0 then%>
 	 		 <%@offset=@offset - @limit%>
-			 <%=link_to(l(:label_traces_previous), {:controller => 'traces_home', :action => 'pages', :id => @project.identifier, :offset=> @offset}) %>
+       <% if !@question.nil? && !@question.empty? then %>
+			    <%=link_to(l(:label_traces_previous), {:controller => 'traces_home', :action => 'pages', :id => @project.identifier, :offset=> @offset, :q => @question}) %>
+       <% else %>
+          <%=link_to(l(:label_traces_previous), {:controller => 'traces_home', :action => 'pages', :id => @project.identifier, :offset=> @offset}) %>
+       <% end %>
 	 <% end %>
+
 	 <%@offset=@offset + @limit%>
 
    <% if @isNext %>
-	     <%=link_to(l(:label_traces_next), {:controller => 'traces_home', :action => 'pages', :id => @project.identifier, :offset => @offset}) %>
+      <% if !@question.nil? && !@question.empty? then %>
+	        <%=link_to(l(:label_traces_next), {:controller => 'traces_home', :action => 'pages', :id => @project.identifier, :offset => @offset, :q => @question}) %>
+      <% else %>
+          <%=link_to(l(:label_traces_next), {:controller => 'traces_home', :action => 'pages', :id => @project.identifier, :offset => @offset}) %>
+      <% end %>
 	 <% end %>
 </div>
 <% end %>
