Change description: Issue fixed.(Search result displayed when '%' entered in search criteria )

--- a/app/views/traces_home/export.xls.erb
+++ b/app/views/traces_home/export.xls.erb
@@ -1,3 +1,8 @@
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+</style>
+</head>
 <h2>RTM</h2>
 <% if !@traces_data.nil? && !@traces_data.empty? %>
 <div class="scroll-div">
